--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "mongoose": "4.7.6",
-    "angular": "1.6.1",
-    "jsonwebtoken": "7.2.1",
-    "bootstrap": "3.3.7"
+    "mongoose": "~4.7.6",
+    "angular": "~1.6.1",
+    "jsonwebtoken": "~7.2.1",
+    "bootstrap": "~3.3.7",
+    "bcrypt-nodejs": "~0.0.3"
   }
 }
