--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular": "~1.6.1",
     "jsonwebtoken": "~7.2.1",
     "bootstrap": "~3.3.7",
-    "bcrypt-nodejs": "~0.0.3"
+    "bcrypt-nodejs": "~0.0.3",
+    "requirejs": "~2.3.2"
   }
 }
