--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "~1.6.1",
+    "bcrypt-nodejs": "~0.0.3",
     "body-parser": "~1.15.2",
+    "bootstrap": "~3.3.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "mongoose": "~4.7.6",
-    "angular": "~1.6.1",
     "jsonwebtoken": "~7.2.1",
-    "bootstrap": "~3.3.7",
-    "bcrypt-nodejs": "~0.0.3",
-    "requirejs": "~2.3.2"
+    "mongoose": "~4.7.6",
+    "morgan": "~1.7.0",
+    "ngstorage": "^0.3.11",
+    "requirejs": "~2.3.2",
+    "serve-favicon": "~2.3.0",
   }
 }
