--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "morgan": "~1.7.0",
     "ngstorage": "^0.3.11",
     "requirejs": "~2.3.2",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.3.0"
   }
 }
