--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "body-parser": "~1.15.2",
     "bootstrap": "~3.3.7",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.2.0",
+    "ejs": "latest",
     "express": "~4.14.0",
     "jade": "~1.11.0",
-    "pug": "latest",
     "jsonwebtoken": "~7.2.1",
     "mongoose": "~4.7.6",
     "morgan": "~1.7.0",
     "ngstorage": "^0.3.11",
+    "pug": "latest",
     "requirejs": "~2.3.2",
-    "ejs": "latest",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
