--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "webpage",
   "version": "0.0.0",
+  "engines": {
+    "node": "8.0.0",
+    "npm": "5.0.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
